--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">let-trip-project</string>
+    <string name="titleToolBar">Let's Trip</string>
 </resources>
