--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,23 @@
     <string name="destination">
         Destinations
     </string>
+
+    <string name="visit_angko">
+Visit ANGKOR WAT
+</string>
+
+    <string name="koh_norea_i">
+Koh Norea Island
+</string>
+
+    <string name="km_away">
+7.2 km away
+</string>
+    <string name="siem_reap_c">
+Siem Reap, Cambodia
+</string>
+
+    <string name="the_archite">
+The architecture and layout of the successive capitals bear witness to a high level of social order and ranking within the Khmer Empire. Angkor is therefore a major site exemplifying cultural, religious and symbolic values, as well as containing high architectural, archaeological and artistic significance.
+</string>
 </resources>
