Add style, color, font

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">let-trip-project</string>
     <string name="titleToolBar">Let\'s Trip</string>
+    <string name="categories">Categories</string>
+    <string name="view_all">View all</string>
+    <string name="near_you">Near You</string>
 </resources>
