--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="categories">Categories</string>
     <string name="view_all">View all</string>
     <string name="near_you">Near You</string>
+    <string name="popular_destination">Popular Destination</string>
 </resources>
