[RENAME] ID (Destination)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,11 +15,11 @@
 Visit ANGKOR WAT
 </string>
 
-    <string name="koh_norea_i">
+    <string name="txt_destination">
 Koh Norea Island
 </string>
 
-    <string name="km_away">
+    <string name="txt_distance">
 7.2 km away
 </string>
     <string name="siem_reap_c">
